# aptos-core

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  RELEASE.md  RUST_CODING_STYLE.md  package-lock.json
.cargo/: config.toml
.github/: README.md
.github/ts-tasks/: package-lock.json
.github/workflows/: cli-release.yaml  lint-test.yaml
api/: Cargo.toml
api/openapi-spec-generator/: Cargo.toml
api/src/: accounts.rs  blocks.rs  context.rs  lib.rs  runtime.rs  state.rs  transactions.rs
api/test-context/: Cargo.toml
api/types/: Cargo.toml
aptos-move/aptos-aggregator/: Cargo.toml
aptos-move/aptos-debugger/: Cargo.toml
aptos-move/aptos-gas/: Cargo.toml
aptos-move/aptos-gas-profiling/: Cargo.toml
aptos-move/aptos-memory-usage-tracker/: Cargo.toml
aptos-move/aptos-release-builder/: Cargo.toml
aptos-move/aptos-resource-viewer/: Cargo.toml
aptos-move/aptos-sdk-builder/: Cargo.toml
aptos-move/aptos-transaction-benchmarks/: Cargo.toml
aptos-move/aptos-transactional-test-harness/: Cargo.toml
aptos-move/aptos-validator-interface/: Cargo.toml
aptos-move/aptos-vm-benchmarks/: Cargo.toml
aptos-node/: Cargo.toml
aptos-utils/: Cargo.toml
config/: Cargo.toml
consensus/: Cargo.toml
mempool/: Cargo.toml
network/: Cargo.toml
sdk/: Cargo.toml
types/: Cargo.toml
vm-validator/: Cargo.toml
zk-port/: README.md
zk-port/cond-parallel/: Cargo.toml
zk-port/cond-parallel/src/: lib.rs  thread_pool.rs
zk-port/cond-parallel/src/strategies/: default.rs  pin_exe_threads_to_cores.rs  threads_priority.rs
(+274 files in other folders)
