[package]
name = "cond-parallel"
description = "Utilities for conditional parallelism with sequential fallback for ZK targets"
version = "0.1.0"

authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aptos-runtimes = { workspace = true }
core_affinity = { workspace = true }
libc = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
rayon = { workspace = true }
